files/5ingress/ingress_config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arcadia
  annotations:
    nginx.com/health-checks: "true"    	
    ingress.kubernetes.io/ssl-redirect: "true"

    nginx.com/sticky-cookie-services: "serviceName=arcadia-main srv_id expires=1h path=/"

    nginx.org/server-snippets: |
      proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
      proxy_cache_valid any 30s;

    nginx.org/location-snippets: |      
      proxy_cache my_cache;
      add_header X-Cache-Status $upstream_cache_status;

spec:
  tls:
  - hosts:
    - a34523745e73549268ed22ae8df4c28a-2095904056.eu-central-1.elb.amazonaws.com
    secretName: arcadia-tls
  rules:
  - host: a34523745e73549268ed22ae8df4c28a-2095904056.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: arcadia-main
          servicePort: 80
      - path: /api/
        backend:
          serviceName: arcadia-app2
          servicePort: 80
      - path: /app3/
        backend:
          serviceName: arcadia-app3
          servicePort: 80
